<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Primera imagen del producto seleccionado -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagenProdCar"
            android:src="@drawable/ico_carrito_compra"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <!--Nombre del producto -->
        <TextView
            android:id="@+id/nombrePCar"
            android:text="@string/nombre_p_car"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imagenProdCar"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Descripción del producto -->
        <TextView
            android:id="@+id/decripcionPCar"
            android:text="@string/descripcion_p_car"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/nombrePCar"
            android:layout_marginTop="5dp"
            tools:text="@tools:sample/lorem[15]"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Nota del descuento -->
        <TextView
            android:id="@+id/notaDescPCar"
            android:text="@string/nota_desc_p_car"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/fondo_verde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <!-- Precio original -->
        <TextView
            android:id="@+id/precioOriginalPCar"
            android:text="@string/precio_original_p_car"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Precio con descuento -->
        <TextView
            android:id="@+id/precioDescPCar"
            android:text="@string/precio_desc_p_car"
            android:padding="10dp"
            android:layout_toEndOf="@id/precioOriginalPCar"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <!-- Precio final -->
        <TextView
            android:id="@+id/precioFinalPCar"
            android:textAlignment="textStart"
            android:text="@string/precio_final_p_car"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtCantidadProductosCar"
            android:hint="@string/cantidad_p_car"
            android:textSize="18sp"
            android:inputType="numberDecimal"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAgregarCarrito"
        android:text="@string/btn_agregar_carrito"
        android:padding="5dp"
        app:cornerRadius="0dp"
        android:layout_marginTop="10dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>