<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Nota del descuento -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/item_nota_p"
                android:id="@+id/item_nota_p"
                android:background="@drawable/fondo_verde"
                android:visibility="gone"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibFav"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ico_no_favorito"
                android:background="@android:color/transparent"
                android:padding="7dp"/>
        </RelativeLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imagenProducto"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ico_producto"/>

        <!-- Nombre del producto -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginTop="7dp"
            android:text="@string/item_nombre_p"
            android:id="@+id/item_nombre_p"
            android:textSize="17sp"
            android:textStyle="bold"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <!-- Precio con descuento del producto -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_precio_p_desc"
                android:id="@+id/item_precio_p_desc"
                android:visibility="gone"
                android:layout_marginEnd="10dp"
                android:textSize="16sp"
                android:textColor="@color/azul_marino_oscuro"/>

            <!-- Precio del producto -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_precio_p"
                android:id="@+id/item_precio_p"
                android:layout_toEndOf="@+id/item_precio_p_desc"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/itemStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Stock: 0"
                android:textSize="12sp"
                android:textColor="@color/azul_marino_oscuro"
                android:layout_marginTop="2dp"
                android:layout_below="@id/item_precio_p"/>

        </RelativeLayout>



        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            android:layout_gravity="center"
            android:text="@string/item_agregar_carrito_p"
            android:id="@+id/item_agregar_carrito_p"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>