<?xml version="1.0" encoding="utf-8"?>
<!-- ScrollView porque puede que en pantallas pequeñas no se alcancen a ver --> 
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vendedor.RegistroVendedorActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_registro_vendedor"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ico_registro_vendedor"/>
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombreV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nombreV"
                android:hint="@string/edt_nombreV"
                android:inputType="textPersonName|textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ico_nombre"
                android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/edt_emailV"
                android:id="@+id/edt_emailV"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ico_email"
                android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContrasenaV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/edt_contrasenaV"
                android:id="@+id/edt_ContrasenaV"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ico_passw"
                android:drawablePadding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCcontrasenaV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/edt_ccontrasenaV"
                android:id="@+id/edt_CcontrasenaV"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ico_passw"
                android:drawablePadding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_registrarV"
            android:text="@string/btn_registrarV"
            app:cornerRadius="8dp"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/overlayCargando"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progreso"
            android:layout_gravity="center"/>

    </FrameLayout>
</FrameLayout>
