<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/btnEliminarUsuario"
                android:layout_alignParentStart="true"
                android:layout_margin="4dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ico_borrar_"
                android:tint="@android:color/holo_red_dark"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:id="@+id/imgUsuarioItem"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ico_login_cliente"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edt_nombreV"
                    android:id="@+id/tvNombreUsuario"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailUsuario"
                    android:text="@string/edt_emailV"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tipoUsuario"
                    android:text="@string/tipo_usuario"
                    android:textStyle="bold"
                    android:textColor="@color/azul_marino_oscuro"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnVenta"
                app:cornerRadius="8dp"
                android:text="@string/btn_venta"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>



</com.google.android.material.card.MaterialCardView>